--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">SOPT_KAKAOPAY</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="dummy_title">Hello blank fragment</string>
+    <!--menu_home-->
+    <string name="menu_assets">자산</string>
+    <string name="menu_benefits">혜택</string>
+    <string name="menu_home">홈</string>
+    <string name="menu_stocks">주식</string>
+    <string name="menu_all">전체</string>
+    <!-- HomeFragment-->
+    <string name="home_on_site_payment">현장 결제</string>
 </resources>
