feat: 스트링 리소스 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,40 @@
     <string name="menu_all">전체</string>
     <!-- HomeFragment-->
     <string name="home_on_site_payment">현장 결제</string>
+    <string name="home_pay_money">페이머니</string>
+    <string name="home_pay_money_cost">15,000</string>
+    <string name="home_charge">충전</string>
+    <string name="home_send">송금</string>
+    <string name="home_kakao_bank">카카오뱅크</string>
+    <string name="home_deposit">입금</string>
+    <string name="home_insurance">보험</string>
+    <string name="home_money_manage">자산관리</string>
+    <string name="home_my_card_limit">내카드한도</string>
+    <string name="home_my_loan_limit">내대출한도</string>
+    <string name="home_my_document">내문서함</string>
+    <string name="home_my_account_benefit">내계좌혜택</string>
+    <string name="home_money_check">머니체크</string>
+    <string name="home_get_every_day">매일모으기</string>
+    <string name="home_total_content">통합내역</string>
+    <string name="home_see_entire">전체보기</string>
+    <string name="home_send_money">정산 보낼 돈</string>
+    <string name="home_yeonjeen">이연진</string>
+    <string name="home_send_money_cost">200,000</string>
+    <string name="home_sending">보내기</string>
+    <string name="home_will_get_money">정산 받을 돈</string>
+    <string name="home_moonsu">강문수</string>
+    <string name="home_get_moeny_cost">34,000</string>
+    <string name="home_get_moeny_check">확인하기</string>
+    <string name="home_pay_point">페이포인트</string>
+    <string name="home_pay_point_cost">25,950</string>
+    <string name="home_get_point_every_day">매일 모으기</string>
+    <string name="home_credit_score">신용점수</string>
+    <string name="home_credit_kcb_score">750점</string>
+    <string name="home_kcb">KCB</string>
+    <string name="home_credit_nice_score">850점</string>
+    <string name="home_nice">NICE</string>
+    <string name="home_increase_credit_score">신용점수 올리기</string>
+    <string name="home_privacy_policy">개인정보처리방침</string>
+    <string name="home_customer_center">고객센터</string>
+    <string name="home_report_problem">신고하기</string>
 </resources>
